--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/icons": "^5.0.1",
     "@rainbow-me/rainbowkit": "^0.12.7",
     "antd": "^5.0.0",
+    "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.1",
     "ethers": "^5",
     "lottie-web": "^5.10.2",
@@ -28,6 +29,7 @@
     "wagmi": "^0.12.10"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@next/bundle-analyzer": "^12.0.9",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
